--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,6 +4,7 @@
     "pages/index/index",
     "pages/itemD/itemD",
     "pages/characterD/characterD",
+    "pages/character/character",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
     "pages/databaseGuide/databaseGuide",
